Fix bug with chat hidden and visible states.

--- a/teach-me-ui/src/styles/Main/_Chat.scss
+++ b/teach-me-ui/src/styles/Main/_Chat.scss
@@ -163,11 +163,11 @@ body,
   }
 
   &.visible {
-    display: flex;
+    display: flex !important;
   }
 
   &.hidden {
-    display: none;
+    display: none !important;
   }
 }
 
